third_party/move/move-compiler-v2/tests/checking/typing/type_variable_join_threaded_unpack_invalid.exp

Diagnostics:
error: cannot return `integer` from a function with result type `bool`
   ┌─ tests/checking/typing/type_variable_join_threaded_unpack_invalid.move:34:9
   │
34 │         f1
   │         ^^
